Bulk cart items adding
